# manip_rl

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.devcontainer/: devcontainer-lock.json  devcontainer.json
docs/: gpu_verification.md  rocm_setup.md
notebooks/: manipulation.py
scripts/: check_gpu.py  install_rocm_arch.sh  test.sh
src/manip_rl/: __init__.py
src/manip_rl/envs/: base_env.py  randomize.py  registry.py
src/manip_rl/envs/tasks/: base.py  pick_place.py
src/manip_rl/planning/: base.py  demo.py  hierarchy.py  rrt.py
src/manip_rl/robots/: base.py  panda.py
src/manip_rl/training/: checkpoints.py  evaluate.py  gym_wrapper.py  ppo.py  ppo_brax.py
src/manip_rl/viz/: render.py
