[project]
name = "manip-rl"
version = "0.1.0"
description = "RL manipulation research platform on MuJoCo Playground (MJX)"
requires-python = ">=3.12,<3.13"
dependencies = [
    "mujoco>=3.2",
    "mujoco-mjx>=3.2",
    "brax>=0.12",
    "playground>=0.0.5",
    # brax (<=0.14) still uses APIs removed in jax 0.10; 0.8.x also matches the
    # jax-rocm7 plugin wheels (docs/rocm_setup.md).
    "jax==0.8.*",
    "ml-collections>=1.0",
    "mediapy>=1.2",
    "matplotlib>=3.9",
    "orbax-checkpoint>=0.6",
    "tensorboardX>=2.6",
]

[project.optional-dependencies]
# GPU backend for the AMD card. Wheel versions must match the system ROCm
# major version (see docs/rocm_setup.md before changing these).
rocm = [
    "jax-rocm7-plugin",
    "jax-rocm7-pjrt",
]
sb3 = [
    "gymnasium>=1.0",
    "stable-baselines3>=2.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/manip_rl"]
