[project]
name = "manip-rl"
version = "0.1.0"
description = "RL manipulation research platform on MuJoCo Playground (MJX)"
requires-python = "~=3.12.0"
dependencies = [
    "brax>=0.14.2",
    "jax~=0.8.2.0",
    "matplotlib>=3.10.9",
    "mediapy>=1.2.6",
    "ml-collections>=1.1.0",
    "mujoco>=3.9.0",
    "mujoco-mjx>=3.9.0",
    "orbax-checkpoint>=0.12.0",
    "playground>=0.2.0",
    "tensorboardx>=2.6.5",
]

[project.optional-dependencies]
# GPU backend for the AMD card. Wheel versions must match the system ROCm
# major version (see docs/rocm_setup.md before changing these).
rocm = ["jax-rocm7-plugin", "jax-rocm7-pjrt", "jaxlib"]
sb3 = ["gymnasium>=1.0", "stable-baselines3>=2.4"]

[dependency-groups]
dev = ["ipykernel>=7.3.0", "pre-commit>=4.6.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/manip_rl"]

# ROCm JAX wheels: jaxlib + the matching PJRT plugin/pjrt, all from the same
# rocm-jax v0.8.2 release so the PJRT C API versions line up. PyPI's
# jax-rocm7-{plugin,pjrt} default to 0.10.x, which is incompatible with the
# pinned jaxlib 0.8.2 (plugin refuses to load) — so pin them here too. The
# rocm7.2.0 build matches the devcontainer image (rocm/dev-ubuntu-24.04:7.2.x).
[tool.uv.sources]
jaxlib = { url = "https://github.com/ROCm/rocm-jax/releases/download/rocm-jax-v0.8.2/jaxlib-0.8.2+rocm7-cp312-cp312-manylinux_2_27_x86_64.manylinux_2_28_x86_64.whl" }
jax-rocm7-plugin = { url = "https://github.com/ROCm/rocm-jax/releases/download/rocm-jax-v0.8.2/jax_rocm7_plugin-0.8.2+rocm7.2.0-cp312-cp312-manylinux_2_28_x86_64.whl" }
jax-rocm7-pjrt = { url = "https://github.com/ROCm/rocm-jax/releases/download/rocm-jax-v0.8.2/jax_rocm7_pjrt-0.8.2+rocm7.2.0-py3-none-manylinux_2_28_x86_64.whl" }
